# pywikicli

./: .gitignore  Main_Page.md  Main_Page.wiki  README.md  bump_version.sh  pyproject.toml
.github/workflows/: python-tests.yml  release.yml
docs/: Features.md  ImplementationDesign.md  LibraryUse.md  RestApiCliDesignGuide.md
pywikicli/: __init__.py  api.py  cli.py  config.py  converters.py  interfaces.py
pywikicli/commands/: __init__.py  config_command.py  crawl_command.py  get_command.py  put_command.py
tests/: test_basic.py
wikibot/: __init__.py  api.py  cli.py  config.py
wikibot/commands/: __init__.py  config_command.py  crawl_command.py  get_command.py  put_command.py
