[tool.poetry]
name = "wikibot"
version = "0.1.0"
description = "A CLI tool to interact with MediaWiki via its API"
authors = ["Aeson V <viloforge@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.3"
requests = "^2.28.0"
PyYAML = "^6.0"
pypandoc = "^1.15"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.10.0"

[tool.poetry.scripts]
wikibot = "wikibot.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
